src/test/resources/frontendReference/invalid/syntaxErr/class/simple/classDirectArrayReference.waccast
-- Compiling...
Errors detected during compilation! Exit code 100 returned.
Syntactic Error at line 21:18 -- mismatched input '[' expecting {'+', '-', '*', '/', '%', '>', '>=', '<', '<=', '==', '!=', '&&', '||', ';', 'end'}
1 parser error(s) detected, no further compilation attempted.
